fixed spacing of lyrics-body and about-info containers

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ form > button {
   flex-flow: column nowrap;
   width: 100%;
   position: relative;
-  padding: 50px;
-  margin-top: 5%;
+  margin: 8% 2%;
 }
 
 .lyrics {
@@ -112,11 +111,13 @@ img {
 }
 
 .lyrics-body {
-  width: 48%;
+  width: 40%;
+  margin: 0 3.5%;
 }
 
 .about-info {
-  width: 48%;
+  width: 40%;
+  margin: 0 3.5%;
 }
 
 .about-info img {
